fixed overflow for aspect-ratio

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,7 @@
 .cover__link {
   text-decoration: none;
   width: 100%;
-  height: 100%;
+  aspect-ratio: 16 / 10;
   color: #fff;
   display: flex;
   flex-direction: column;
