--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,8 +1,8 @@
 .cover {
   background-image: url(../../images/cover-trains.jpg);
   background-size: cover;
+  background-position: center center;
   width: 100%;
-  aspect-ratio: 16 / 10;
   max-width: 1184px;
   display: flex;
   flex-direction: column;
